--- a/Languages/default-tr.xml
+++ b/Languages/default-tr.xml
@@ -1630,19 +1630,19 @@
 		<text group="25" align="middle" id="G2Leaves">%i ayrıldı</text>
 		<newline group="20" gap="2"/>
 
-		<icon group="30" command="ID_NETWORK_ED2K"/><gap group="30" size="4"/>
-		<text group="30" align="middle" format="b">eDonkey:</text>
-		<text group="31" align="middle">Bağlantı Yok</text>
-		<text group="32" align="middle">Bağlanıyor...</text>
-		<text group="33" align="middle">Bağlandı</text>
-		<newline group="30" gap="2"/>
-
 		<icon group="10" command="ID_NETWORK_G1"/><gap group="10" size="4"/>
 		<text group="10" align="middle" format="b">Gnutella1:</text>
 		<text group="11" align="middle">Bağlantı Yok</text>
 		<text group="12" align="middle">Bağlanıyor...</text>
 		<text group="13" align="middle">Bağlandı</text>
 		<newline group="10" gap="2"/>
+
+		<icon group="30" command="ID_NETWORK_ED2K"/><gap group="30" size="4"/>
+		<text group="30" align="middle" format="b">eDonkey:</text>
+		<text group="31" align="middle">Bağlantı Yok</text>
+		<text group="32" align="middle">Bağlanıyor...</text>
+		<text group="33" align="middle">Bağlandı</text>
+		<newline group="30" gap="2"/>
 
 		<group id="2">
 			<para align="center">
@@ -4207,6 +4207,7 @@
 		<column from="Client" to="İstemci"/>
 		<column from="Downloaded" to="İndirmeler"/>
 		<column from="Complete" to="Tam"/>
+		<column from="Country" to="Ülke"/>
 	</list>
 	<list name="CUploadCtrl">
 		<column from="Remote User" to="Uzak Kullanıcı"/>
@@ -4216,6 +4217,7 @@
 		<column from="Speed" to="Hız"/>
 		<column from="Client" to="İstemci"/>
 		<column from="Rating" to="Reyting"/>
+		<column from="Country" to="Ülke"/>
 	</list>
 	<list name="CNeighboursWnd">
 		<column from="Address" to="Adres"/>
@@ -4229,6 +4231,7 @@
 		<column from="Mode" to="Mod"/>
 		<column from="Client" to="İstemci"/>
 		<column from="Name" to="İsim"/>
+		<column from="Country" to="Ülke"/>
 	</list>
 	<list name="CSecurityWnd">
 		<column from="Address / Content" to="Adres/İçerik"/>
@@ -4247,6 +4250,8 @@
 		<column from="Description" to="Açıklama"/>
 		<column from="CurUsers" to="Güncel Kullanıcılar"/>
 		<column from="MaxUsers" to="Maksimum Kullanıcılar"/>
+		<column from="Failures" to="Sorunlar"/>
+		<column from="Country" to="Ülke"/>
 	</list>
 	<list name="CDiscoveryWnd">
 		<column from="Address" to="Adres"/>
@@ -4280,6 +4285,8 @@
 		<column from="Host/Count" to="Host/Sayı"/>
 		<column from="Speed" to="Hız"/>
 		<column from="Client" to="İstemci"/>
+		<column from="Time" to="Zaman"/>
+		<column from="Country" to="Ülke"/>
 	</list>
 	<list name="CUploadQueueList">
 		<column from="Name" to="İsim"/>
